--- a/src/index.css
+++ b/src/index.css
@@ -25,9 +25,9 @@ a:hover {
 body {
   margin: 0;
   display: flex;
+  justify-content: center;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
@@ -65,4 +65,12 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+ul{
+  list-style:none;
+}
+img {
+  display: block;
+  max-width: 100%;
+  object-fit: cover;
 }
